@@ -112,10 +112,10 @@ ld/testsuite/
 	* ld-ia64/error4.d: Likewise.
 
 diff --git a/bfd/elf-bfd.h b/bfd/elf-bfd.h
-index 43a077c..fe75204 100644
+index faaf632..54df845 100644
 --- a/bfd/elf-bfd.h
 +++ b/bfd/elf-bfd.h
-@@ -2371,7 +2371,7 @@ extern asection _bfd_elf_large_com_section;
+@@ -2375,7 +2375,7 @@ extern asection _bfd_elf_large_com_section;
  #define RELOC_FOR_GLOBAL_SYMBOL(info, input_bfd, input_section, rel,	\
  				r_symndx, symtab_hdr, sym_hashes,	\
  				h, sec, relocation,			\
@@ -124,7 +124,7 @@ index 43a077c..fe75204 100644
    do									\
      {									\
        /* It seems this can happen with erroneous or unsupported		\
-@@ -2386,6 +2386,7 @@ extern asection _bfd_elf_large_com_section;
+@@ -2390,6 +2390,7 @@ extern asection _bfd_elf_large_com_section;
  	h = (struct elf_link_hash_entry *) h->root.u.i.link;		\
  									\
        warned = FALSE;							\
@@ -132,7 +132,7 @@ index 43a077c..fe75204 100644
        unresolved_reloc = FALSE;						\
        relocation = 0;							\
        if (h->root.type == bfd_link_hash_defined				\
-@@ -2408,7 +2409,7 @@ extern asection _bfd_elf_large_com_section;
+@@ -2412,7 +2413,7 @@ extern asection _bfd_elf_large_com_section;
  	;								\
        else if (info->unresolved_syms_in_objects == RM_IGNORE		\
  	       && ELF_ST_VISIBILITY (h->other) == STV_DEFAULT)		\
@@ -141,7 +141,7 @@ index 43a077c..fe75204 100644
        else if (!info->relocatable)					\
  	{								\
  	  bfd_boolean err;						\
-@@ -2424,6 +2425,7 @@ extern asection _bfd_elf_large_com_section;
+@@ -2428,6 +2429,7 @@ extern asection _bfd_elf_large_com_section;
  	}								\
        (void) unresolved_reloc;						\
        (void) warned;							\
@@ -169,7 +169,7 @@ index f427f97..a7553f3 100644
  
        if (sec != NULL && discarded_section (sec))
 diff --git a/bfd/elf-m10300.c b/bfd/elf-m10300.c
-index b44a4b4..379331b 100644
+index 1dd5020..b4ebdf9 100644
 --- a/bfd/elf-m10300.c
 +++ b/bfd/elf-m10300.c
 @@ -2007,7 +2007,7 @@ mn10300_elf_relocate_section (bfd *output_bfd,
@@ -210,7 +210,7 @@ index e2f8a96..544ecac 100644
  	  sym_type = h->type;
  	}
 diff --git a/bfd/elf32-avr.c b/bfd/elf32-avr.c
-index 857a4b7..f69e935 100644
+index 2236fc7..d9383a9 100644
 --- a/bfd/elf32-avr.c
 +++ b/bfd/elf32-avr.c
 @@ -1225,12 +1225,12 @@ elf32_avr_relocate_section (bfd *output_bfd ATTRIBUTE_UNUSED,
@@ -264,7 +264,7 @@ index c8e089b..32af9aa 100644
  	}
  
 diff --git a/bfd/elf32-cr16.c b/bfd/elf32-cr16.c
-index 46769f5..08bf42e 100644
+index 2c05023..a5763be 100644
 --- a/bfd/elf32-cr16.c
 +++ b/bfd/elf32-cr16.c
 @@ -1421,12 +1421,12 @@ elf32_cr16_relocate_section (bfd *output_bfd, struct bfd_link_info *info,
@@ -283,7 +283,7 @@ index 46769f5..08bf42e 100644
  
        if (sec != NULL && discarded_section (sec))
 diff --git a/bfd/elf32-cr16c.c b/bfd/elf32-cr16c.c
-index ea22701..9056f36 100644
+index 4231a42..27d8f80 100644
 --- a/bfd/elf32-cr16c.c
 +++ b/bfd/elf32-cr16c.c
 @@ -715,12 +715,12 @@ elf32_cr16c_relocate_section (bfd *output_bfd,
@@ -302,7 +302,7 @@ index ea22701..9056f36 100644
  
        if (sec != NULL && discarded_section (sec))
 diff --git a/bfd/elf32-cris.c b/bfd/elf32-cris.c
-index 33afc63..b6ab7d2 100644
+index f85ba0d..84cfe36 100644
 --- a/bfd/elf32-cris.c
 +++ b/bfd/elf32-cris.c
 @@ -1043,13 +1043,13 @@ cris_elf_relocate_section (bfd *output_bfd ATTRIBUTE_UNUSED,
@@ -322,7 +322,7 @@ index 33afc63..b6ab7d2 100644
  	  symname = h->root.root.string;
  
 diff --git a/bfd/elf32-crx.c b/bfd/elf32-crx.c
-index 940f357..32dad10 100644
+index 601f715..f26c01e 100644
 --- a/bfd/elf32-crx.c
 +++ b/bfd/elf32-crx.c
 @@ -865,12 +865,12 @@ elf32_crx_relocate_section (bfd *output_bfd, struct bfd_link_info *info,
@@ -397,7 +397,7 @@ index fe7cf92..11e5140 100644
  	  name = h->root.root.string;
  	}
 diff --git a/bfd/elf32-frv.c b/bfd/elf32-frv.c
-index c2b74c6..bad2f63 100644
+index 94e0855..19cf681 100644
 --- a/bfd/elf32-frv.c
 +++ b/bfd/elf32-frv.c
 @@ -2735,13 +2735,13 @@ elf32_frv_relocate_section (bfd *output_bfd ATTRIBUTE_UNUSED,
@@ -436,7 +436,7 @@ index 388d220..115a8d7 100644
  
        if (sec != NULL && discarded_section (sec))
 diff --git a/bfd/elf32-hppa.c b/bfd/elf32-hppa.c
-index 7ec06c7..213886c 100644
+index 9a05c38..24fccaa 100644
 --- a/bfd/elf32-hppa.c
 +++ b/bfd/elf32-hppa.c
 @@ -3706,13 +3706,14 @@ elf32_hppa_relocate_section (bfd *output_bfd,
@@ -457,10 +457,10 @@ index 7ec06c7..213886c 100644
  	  if (!info->relocatable
  	      && relocation == 0
 diff --git a/bfd/elf32-i386.c b/bfd/elf32-i386.c
-index f76c7a7..99a7ce9 100644
+index 9c061ba..3fabf82 100644
 --- a/bfd/elf32-i386.c
 +++ b/bfd/elf32-i386.c
-@@ -3303,11 +3303,12 @@ elf_i386_relocate_section (bfd *output_bfd,
+@@ -3317,11 +3317,12 @@ elf_i386_relocate_section (bfd *output_bfd,
        else
  	{
  	  bfd_boolean warned ATTRIBUTE_UNUSED;
@@ -471,11 +471,11 @@ index f76c7a7..99a7ce9 100644
  				   h, sec, relocation,
 -				   unresolved_reloc, warned);
 +				   unresolved_reloc, warned, ignored);
+ 	  st_size = h->size;
  	}
  
-       if (sec != NULL && discarded_section (sec))
 diff --git a/bfd/elf32-i860.c b/bfd/elf32-i860.c
-index f50e51b..bba2479 100644
+index c7991bd..5440c8b 100644
 --- a/bfd/elf32-i860.c
 +++ b/bfd/elf32-i860.c
 @@ -1121,12 +1121,12 @@ elf32_i860_relocate_section (bfd *output_bfd ATTRIBUTE_UNUSED,
@@ -494,7 +494,7 @@ index f50e51b..bba2479 100644
  
        if (sec != NULL && discarded_section (sec))
 diff --git a/bfd/elf32-ip2k.c b/bfd/elf32-ip2k.c
-index d696a27..eea8e77 100644
+index 3bbad14..2ee907c 100644
 --- a/bfd/elf32-ip2k.c
 +++ b/bfd/elf32-ip2k.c
 @@ -1425,13 +1425,13 @@ ip2k_elf_relocate_section (bfd *output_bfd ATTRIBUTE_UNUSED,
@@ -514,7 +514,7 @@ index d696a27..eea8e77 100644
  	  name = h->root.root.string;
  	}
 diff --git a/bfd/elf32-iq2000.c b/bfd/elf32-iq2000.c
-index 079a962..80ab459 100644
+index 8cf4775..476b44e 100644
 --- a/bfd/elf32-iq2000.c
 +++ b/bfd/elf32-iq2000.c
 @@ -623,12 +623,12 @@ iq2000_elf_relocate_section (bfd *		     output_bfd ATTRIBUTE_UNUSED,
@@ -552,7 +552,7 @@ index 2579034..de5db01 100644
          }
  
 diff --git a/bfd/elf32-m68hc1x.c b/bfd/elf32-m68hc1x.c
-index ef0a9f1..70babed 100644
+index deb3c62..59122a8 100644
 --- a/bfd/elf32-m68hc1x.c
 +++ b/bfd/elf32-m68hc1x.c
 @@ -981,12 +981,12 @@ elf32_m68hc11_relocate_section (bfd *output_bfd ATTRIBUTE_UNUSED,
@@ -684,7 +684,7 @@ index 9a031b4..79a5c46 100644
  	  name = h->root.root.string;
  	}
 diff --git a/bfd/elf32-msp430.c b/bfd/elf32-msp430.c
-index c0459f4..14fd283 100644
+index c08f596..9e06dda 100644
 --- a/bfd/elf32-msp430.c
 +++ b/bfd/elf32-msp430.c
 @@ -446,12 +446,12 @@ elf32_msp430_relocate_section (bfd * output_bfd ATTRIBUTE_UNUSED,
@@ -703,7 +703,7 @@ index c0459f4..14fd283 100644
  
        if (sec != NULL && discarded_section (sec))
 diff --git a/bfd/elf32-mt.c b/bfd/elf32-mt.c
-index c03d8f4..9155c73 100644
+index ded95c9..8ed0304 100644
 --- a/bfd/elf32-mt.c
 +++ b/bfd/elf32-mt.c
 @@ -344,12 +344,12 @@ mt_elf_relocate_section
@@ -741,7 +741,7 @@ index 2b002ab..faf9b93 100644
  
        if (sec != NULL && discarded_section (sec))
 diff --git a/bfd/elf32-ppc.c b/bfd/elf32-ppc.c
-index 5241926..95202c9 100644
+index 3f4e4bf..ada943f 100644
 --- a/bfd/elf32-ppc.c
 +++ b/bfd/elf32-ppc.c
 @@ -7382,10 +7382,12 @@ ppc_elf_relocate_section (bfd *output_bfd,
@@ -759,7 +759,7 @@ index 5241926..95202c9 100644
  	  sym_name = h->root.root.string;
  	}
 diff --git a/bfd/elf32-rl78.c b/bfd/elf32-rl78.c
-index f116839..e5919e9 100644
+index 3a46c6b..c1b0925 100644
 --- a/bfd/elf32-rl78.c
 +++ b/bfd/elf32-rl78.c
 @@ -461,12 +461,13 @@ rl78_elf_relocate_section
@@ -798,7 +798,7 @@ index 5000eb7..18dcbbb 100644
  	  name = h->root.root.string;
  	}
 diff --git a/bfd/elf32-s390.c b/bfd/elf32-s390.c
-index 7a9d89c..2552ddf 100644
+index 491daf3..755af4d 100644
 --- a/bfd/elf32-s390.c
 +++ b/bfd/elf32-s390.c
 @@ -2393,11 +2393,12 @@ elf_s390_relocate_section (bfd *output_bfd,
@@ -816,7 +816,7 @@ index 7a9d89c..2552ddf 100644
  
        if (sec != NULL && discarded_section (sec))
 diff --git a/bfd/elf32-tic6x.c b/bfd/elf32-tic6x.c
-index 419b269..c94d6ef 100644
+index fb30e92..7db2676 100644
 --- a/bfd/elf32-tic6x.c
 +++ b/bfd/elf32-tic6x.c
 @@ -2319,12 +2319,12 @@ elf32_tic6x_relocate_section (bfd *output_bfd,
@@ -855,7 +855,7 @@ index fc49e2b..066cb22 100644
  	    {
  	      /* To avoid generating warning messages about truncated
 diff --git a/bfd/elf32-v850.c b/bfd/elf32-v850.c
-index 80e3acb..3e5fb7e 100644
+index 3e24dca..01ec40a 100644
 --- a/bfd/elf32-v850.c
 +++ b/bfd/elf32-v850.c
 @@ -2203,7 +2203,7 @@ v850_elf_relocate_section (bfd *output_bfd,
@@ -896,7 +896,7 @@ index 3fbc289..f968a31 100644
  	  if ((h->root.type == bfd_link_hash_defined
  	      || h->root.type == bfd_link_hash_defweak)
 diff --git a/bfd/elf32-xc16x.c b/bfd/elf32-xc16x.c
-index b7e0d41..7bb361e 100644
+index 9f285c7..ec7e3da 100644
 --- a/bfd/elf32-xc16x.c
 +++ b/bfd/elf32-xc16x.c
 @@ -373,12 +373,12 @@ elf32_xc16x_relocate_section (bfd *output_bfd,
@@ -934,7 +934,7 @@ index c657b84..9efa8f6 100644
  
        if (sec != NULL && discarded_section (sec))
 diff --git a/bfd/elf32-xtensa.c b/bfd/elf32-xtensa.c
-index 4316322..c7cbcd0 100644
+index e48bf4b..827dd27 100644
 --- a/bfd/elf32-xtensa.c
 +++ b/bfd/elf32-xtensa.c
 @@ -2644,10 +2644,12 @@ elf_xtensa_relocate_section (bfd *output_bfd,
@@ -971,7 +971,7 @@ index 708b362..1c086fe 100644
  	  sym_type = h->type;
  	}
 diff --git a/bfd/elf64-alpha.c b/bfd/elf64-alpha.c
-index c18c37a..98bf6ca 100644
+index 02dd2ab..37b787a 100644
 --- a/bfd/elf64-alpha.c
 +++ b/bfd/elf64-alpha.c
 @@ -4296,14 +4296,14 @@ elf64_alpha_relocate_section (bfd *output_bfd, struct bfd_link_info *info,
@@ -1032,10 +1032,10 @@ index 3195075..47187c95 100644
  	}
  
 diff --git a/bfd/elf64-ppc.c b/bfd/elf64-ppc.c
-index 10b6f9d..4e5c28f 100644
+index 9ce20af..9e39512 100644
 --- a/bfd/elf64-ppc.c
 +++ b/bfd/elf64-ppc.c
-@@ -12335,10 +12335,12 @@ ppc64_elf_relocate_section (bfd *output_bfd,
+@@ -12337,10 +12337,12 @@ ppc64_elf_relocate_section (bfd *output_bfd,
  	}
        else
  	{
@@ -1050,7 +1050,7 @@ index 10b6f9d..4e5c28f 100644
  	  sym_type = h_elf->type;
  	  if (sec != NULL
 diff --git a/bfd/elf64-s390.c b/bfd/elf64-s390.c
-index 2b6d9bf..f100b1a 100644
+index 2515cb5..2ac9247 100644
 --- a/bfd/elf64-s390.c
 +++ b/bfd/elf64-s390.c
 @@ -2353,11 +2353,12 @@ elf_s390_relocate_section (bfd *output_bfd,
@@ -1068,10 +1068,10 @@ index 2b6d9bf..f100b1a 100644
  
        if (sec != NULL && discarded_section (sec))
 diff --git a/bfd/elf64-x86-64.c b/bfd/elf64-x86-64.c
-index 92bf991..24e4857 100644
+index c260606..20120ed 100644
 --- a/bfd/elf64-x86-64.c
 +++ b/bfd/elf64-x86-64.c
-@@ -3252,11 +3252,12 @@ elf_x86_64_relocate_section (bfd *output_bfd,
+@@ -3268,11 +3268,12 @@ elf_x86_64_relocate_section (bfd *output_bfd,
        else
  	{
  	  bfd_boolean warned ATTRIBUTE_UNUSED;
@@ -1082,9 +1082,9 @@ index 92bf991..24e4857 100644
  				   h, sec, relocation,
 -				   unresolved_reloc, warned);
 +				   unresolved_reloc, warned, ignored);
+ 	  st_size = h->size;
  	}
  
-       if (sec != NULL && discarded_section (sec))
 diff --git a/bfd/elfnn-ia64.c b/bfd/elfnn-ia64.c
 index afa1e04..a21aef1 100644
 --- a/bfd/elfnn-ia64.c
@@ -1111,7 +1111,7 @@ index afa1e04..a21aef1 100644
  	}
  
 diff --git a/bfd/elfxx-sparc.c b/bfd/elfxx-sparc.c
-index 9811d17..af0be11 100644
+index 196d566..0127cff 100644
 --- a/bfd/elfxx-sparc.c
 +++ b/bfd/elfxx-sparc.c
 @@ -2992,12 +2992,12 @@ _bfd_sparc_elf_relocate_section (bfd *output_bfd,
@@ -1130,7 +1130,7 @@ index 9811d17..af0be11 100644
  	    {
  	      /* To avoid generating warning messages about truncated
 diff --git a/bfd/elfxx-tilegx.c b/bfd/elfxx-tilegx.c
-index c1b54f9..1078b86 100644
+index b28d1a8..37fdc50 100644
 --- a/bfd/elfxx-tilegx.c
 +++ b/bfd/elfxx-tilegx.c
 @@ -3165,12 +3165,13 @@ tilegx_elf_relocate_section (bfd *output_bfd, struct bfd_link_info *info,
@@ -1150,10 +1150,10 @@ index c1b54f9..1078b86 100644
  	    {
  	      /* To avoid generating warning messages about truncated
 diff --git a/ld/lexsup.c b/ld/lexsup.c
-index 4fd929a..5e73f7a 100644
+index 2f71750..559debb 100644
 --- a/ld/lexsup.c
 +++ b/ld/lexsup.c
-@@ -1086,12 +1086,7 @@ parse_args (unsigned argc, char **argv)
+@@ -1088,12 +1088,7 @@ parse_args (unsigned argc, char **argv)
  	  if (config.has_shared)
  	    {
  	      link_info.shared = TRUE;
@@ -1167,7 +1167,7 @@ index 4fd929a..5e73f7a 100644
  	    }
  	  else
  	    einfo (_("%P%F: -shared not supported\n"));
-@@ -1452,14 +1447,6 @@ parse_args (unsigned argc, char **argv)
+@@ -1457,14 +1452,6 @@ parse_args (unsigned argc, char **argv)
        free (default_dirlist);
      }
  
@@ -1182,7 +1182,7 @@ index 4fd929a..5e73f7a 100644
    if (link_info.relocatable)
      {
        if (command_line.check_section_addresses < 0)
-@@ -1516,6 +1503,27 @@ parse_args (unsigned argc, char **argv)
+@@ -1521,6 +1508,27 @@ parse_args (unsigned argc, char **argv)
    if (! link_info.shared || link_info.pie)
      link_info.executable = TRUE;
  
